--- a/SIGTR/dashboard/static/dashboard/css/modalInicio.css
+++ b/SIGTR/dashboard/static/dashboard/css/modalInicio.css
@@ -125,7 +125,7 @@
 .contentCompHW {
     display: grid;
     grid-template-areas:
-        "compImg progress-bar";
+        "compImg contentHW";
     grid-template-columns: 30% auto;
     align-items: center;
     justify-items: center;
@@ -139,6 +139,23 @@
 
 .imgHW {
     height: 100%;
+}
+
+.contentHW {
+    display: grid;
+    flex-direction: column;
+    justify-items: center;
+    width: 100%;
+    gap:10px;
+}
+
+#sistemaOperativotext {
+    font-weight: 600;
+    color: azure;
+    text-align: center;
+    display: grid;
+    width: 80%;
+    justify-items: start;
 }
 
 /*progress bar*/
