--- a/SIGTR/dashboard/templates/dashboard/client/inicio.html
+++ b/SIGTR/dashboard/templates/dashboard/client/inicio.html
@@ -87,8 +87,8 @@
                         <button id="btnMonitoreo" class="btnMonitoreodiv">
                             <div class="nombreMonit">MONITOREO DEL SISTEMA</div>
                             <div class="graficoMonit"><img src="{% static 'dashboard/img/monitoreo.webp' %}" alt=""
-                                    class="imgGrafico"></div>
-                            <div class="progress-bar">
+                                    class="imgGrafico" id="imgGraficoMonitoreo"></div>
+                            <div class="progress-bar" id="progressBarMonitoreo">
                                 <span data-width="80%"></span>
                             </div>
                         </button>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="botonesSoporte">
                         <button class="botResp" id="btnRespRest">RESPALDO Y RESTAURACIÓN</button>
-                        <button  class="botCentro" id="btnCentro">CENTRO DE APRENDIZAJES</button>
+                        <button class="botCentro" id="btnCentro">CENTRO DE APRENDIZAJES</button>
                     </div>
                 </div>
                 <div class="asistenteSoporte">
@@ -136,39 +136,35 @@
                         </button>
                     </div>
                     <div class="diagnostico">
-                        <button class="analisisButton">
-                            <div class="iconDiagnostico"><i class="fa-brands fa-searchengin fa-lg iconAnalisis"></i></div>
+                        <button class="analisisButton" id="btnDiagnosticoDet">
+                            <div class="iconDiagnostico"><i class="fa-brands fa-searchengin fa-lg iconAnalisis"></i>
+                            </div>
                             <div class="textDiagnosticoDet" id="textPrimeroDiag">DIAGNÓSTICO</div>
                         </button>
                     </div>
                     <div class="optimizar">
-                        <button class="analisisButton">
+                        <button class="analisisButton" id="btnOptimizarAntivirus">
                             <div class="iconDiagnostico"><i class="fa-solid fa-shield-halved iconAnalisis"></i></div>
                             <div class="textDiagnosticoDet">ANALIZAR ANTIVIRUS</div>
                         </button>
                     </div>
                     <div class="mantenimiento">
-                        <button class="analisisButton">
+                        <button class="analisisButton" id="btnMantFunction">
                             <div class="iconDiagnostico"><i class="fa-solid fa-gears iconAnalisis"></i></div>
                             <div class="textDiagnosticoDet">MANTENIMIENTO</div>
                         </button>
                     </div>
-                    <div class="recomendacSW">
-                        <button class="analisisButton">
-                            <div class="iconDiagnostico"><i class="fa-solid fa-laptop-code iconAnalisis"></i> </div>
-                            <div class="textDiagnosticoDet">RECOMENDACIONES DE SOFTWARE</div>
-                        </button>
-                    </div>
+
                     <div class="monitoreoSop">
-                        <button class="analisisButton">
+                        <button class="analisisButton" id="btnMonitoreioAnalisis">
                             <div class="iconDiagnostico"><i class="fa-solid fa-chart-line iconAnalisis"></i></div>
                             <div class="textDiagnosticoDet">MONITOREO DEL SISTEMA</div>
                         </button>
                     </div>
                     <div class="historial">
-                        <button class="analisisButton">
+                        <button class="analisisButton" id="btnHistFunction">
                             <div class="iconDiagnostico"><i class="fa-solid fa-file iconAnalisis"></i></div>
-                            <div class="textDiagnosticoDet"  id="textPrimeroDiag">HISTORIAL</div>
+                            <div class="textDiagnosticoDet" id="textPrimeroDiag">HISTORIAL</div>
                         </button>
                     </div>
                 </div>
@@ -176,10 +172,10 @@
                     <div class="detdiagnostico">
                         <button id="btnAbrirModalDiagnostico" class="btnUlt">
                             <div class="textDiag">DIAGNÓSTICO</div>
-                            <div class="imgDetDiag">
+                            <div class="imgDetDiag" id="imgDiagnosticoDet">
                                 <img class="imgDiagnostico" src="{% static 'dashboard/img/diagnostico.webp' %}" alt="">
                             </div>
-                            <div class="progress-bar">
+                            <div class="progress-bar" id="progressBarDiagnostico">
                                 <span data-width="100%"></span>
                             </div>
                         </button>
@@ -187,10 +183,10 @@
                     <div class="antivirus">
                         <button class="btnUlt" id="btnAbrirModalAntivirus">
                             <div class="textAnt">ANTIVIRUS</div>
-                            <div class="imgDetAnt"><img class="imgAntivirus"
+                            <div class="imgDetDiag" id="imgAntivirusDet"><img class="imgAntivirus"
                                     src="{% static 'dashboard/img/antivirus.webp' %}" alt="">
                             </div>
-                            <div class="progress-bar">
+                            <div class="progress-bar" id="progressBarAntivirus">
                                 <span data-width="70%"></span>
                             </div>
                         </button>
@@ -198,10 +194,10 @@
                     <div class="ultMant">
                         <button class="btnUlt" id="btnAbrirModalMantenimiento">
                             <div class="textMant">MANTENIMIENTO</div>
-                            <div class="imgDetMant"><img class="imgMant"
+                            <div class="imgDetDiag" id="imgMantDet"><img class="imgMant"
                                     src="{% static 'dashboard/img/mantenimiento.webp' %}" alt="">
                             </div>
-                            <div class="progress-bar">
+                            <div class="progress-bar" id="progressBarMantenimiento">
                                 <span data-width="60%"></span>
                             </div>
                         </button>
@@ -209,10 +205,10 @@
                     <div class="ultHist">
                         <button class="btnUlt" id="btnHist">
                             <div class="textHist">HISTORIAL</div>
-                            <div class="imgDetHist"><img src="{% static 'dashboard/img/historial.webp' %}"
+                            <div class="imgDetDiag" id="imgHistDet"><img src="{% static 'dashboard/img/historial.webp' %}"
                                     class="imgHist" alt="">
                             </div>
-                            <div class="progress-bar">
+                            <div class="progress-bar" id="progressBarHistorial">
                                 <span data-width="90%"></span>
                             </div>
                         </button>
@@ -227,7 +223,14 @@
 
     <script src="https://kit.fontawesome.com/233c0f00ee.js" crossorigin="anonymous"></script>
     <script src="{% static 'dashboard/js/clientes/inicio.js' %}"></script>
-    <script src="{% static 'dashboard/js/clientes/graficos.js' %}"></script>
+    <script src="{% static 'dashboard/js/clientes/monitoreo.js' %}"></script>
+    <script src="{% static 'dashboard/js/clientes/antivirus.js' %}"></script>
+    <script src="{% static 'dashboard/js/clientes/diagnostico.js' %}"></script>
+    <script src="{% static 'dashboard/js/clientes/mantenimiento.js' %}"></script>
+    <script src="{% static 'dashboard/js/clientes/centroAprendizaje.js' %}"></script>
+    <script src="{% static 'dashboard/js/clientes/asistenciaTecnica.js' %}"></script>
+    <script src="{% static 'dashboard/js/clientes/historial.js' %}"></script>
+    <script src="{% static 'dashboard/js/clientes/recomendaciones.js' %}"></script>
 </body>
 
 </html>
