diseño inicio AsistenteIA

--- a/SIGTR/dashboard/static/dashboard/css/principal.css
+++ b/SIGTR/dashboard/static/dashboard/css/principal.css
@@ -364,7 +364,6 @@ body {
     height: 100%;
     background: none;
     color: white;
-    cursor: pointer;
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -529,14 +528,33 @@ body {
     position: relative;
     display: flex;
     justify-content: center;
+    cursor: pointer;
 }
 
-.robot {
-    width: 70%;
-    height: 100%;
-    filter: drop-shadow(6px 6px 10px rgb(72, 100, 128));
+#robotimg {
+    width: 80%;
+    display: flex;
+    filter: drop-shadow(1px 1px 15px rgba(42, 147, 189, 0.8));
 }
-
+#video-container, #video-container2{
+    width: 100%;
+    position: relative;
+    display: none;
+    justify-content: center;
+    filter: drop-shadow(1px 1px 15px rgba(42, 147, 189, 0.8));
+}
+#robotGIF{
+    display: flex;
+    clip-path: circle(50% at 50% 50%);
+    object-fit: cover; /*ajustar el contenido (como imágenes o videos) dentro de un contenedor*/
+    width: 80%;
+}
+#robotGIFOjos{
+    display: flex;
+    clip-path: circle(50% at 50% 50%);
+    object-fit: cover; /*ajustar el contenido (como imágenes o videos) dentro de un contenedor*/
+    width: 80%;
+}
 .mensajeIA {
     grid-area: mensajeIA;
     width: 80%;
@@ -946,10 +964,6 @@ body {
         gap: 10px;
     }
 
-    .monitoreo {
-        cursor: pointer;
-    }
-
     #btnMonitoreo {
         width: 100%;
         height: 100%;
@@ -1010,14 +1024,32 @@ body {
         width: 100%;
         display: flex;
         justify-content: center;
+        align-items: center;
     }
-
-    .robot {
+    .img-container{
+        width: 100%;
+    }
+    #robotimg {
         width: 80%;
-        height: 100%;
-        filter: drop-shadow(6px 6px 10px rgb(72, 100, 128));
+        display: flex;
+        filter: drop-shadow(1px 1px 12px rgba(42, 147, 189, 3));
     }
-
+    .video-container {
+        width: 100%;
+        position: relative;
+        display: none;
+        justify-content: center;
+        filter: drop-shadow(1px 1px 12px rgba(42, 147, 189, 3));
+    }
+    #robotGIF{
+        display: flex;
+        clip-path: circle(50% at 50% 50%);
+        object-fit: cover; /*ajustar el contenido (como imágenes o videos) dentro de un contenedor*/
+        width: 80%;
+    }
+    #audioRobot{
+        display: none;
+    }
     .microfono {
         border: 1px solid rgb(72, 100, 128);
         padding: 8px;
@@ -1078,7 +1110,6 @@ body {
         height: 100%;
         background: none;
         color: white;
-        cursor: pointer;
         display: flex;
         flex-direction: column;
         gap: 5px;
