--- a/SIGTR/tickets/templates/tickets/request_assistance.html
+++ b/SIGTR/tickets/templates/tickets/request_assistance.html
@@ -184,7 +184,7 @@
             // Valores predeterminados para el mapa
             const defaultLat = -12.0464; // Lima, Perú
             const defaultLng = -77.0428;
-            const MAX_DISTANCE_KM = "{{ max_distance }}"; // Usar el valor del servidor {{}} sin comillas
+            const MAX_DISTANCE_KM = {{ max_distance }}; // Usar el valor del servidor {{}} sin comillas
 
             let latField = document.getElementById("id_latitude");
             let lonField = document.getElementById("id_longitude");
