--- a/SIGTR/dashboard/static/dashboard/css/principal.css
+++ b/SIGTR/dashboard/static/dashboard/css/principal.css
@@ -15,7 +15,7 @@
 
 body {
     min-height: 100vh;
-    background:  rgb(24, 23, 23);
+    background: rgb(29, 29, 29) /*rgb(24, 23, 23)*/;
     background-size: 600% 600%;
     /* Hacemos que el gradiente sea más grande para poder moverlo */
     color: white;
@@ -209,77 +209,6 @@ body {
     color: white;
     padding: 10px 0px 10px 0px;
     align-items: center;
-}
-
-/*div del cuadro de acciones respaldo y restauración*/
-.Restauracion {
-    grid-area: Restauracion;
-    display: grid;
-    grid-template-areas:
-        "nombreResta"
-        "botonesRest"
-        "verCompleto";
-    justify-items: center;
-    align-items: center;
-    width: 85%;
-    background: linear-gradient(180deg, rgb(54, 56, 57), rgb(38, 40, 40));
-    border: 3px solid rgb(42, 76, 89);
-    box-shadow: 5px 10px 10px -3px rgb(1, 1, 1);
-    border-radius: 30px;
-}
-
-.nombreResta {
-    grid-area: nombreResta;
-    border-bottom: 1px solid white;
-    width: 100%;
-    text-align: center;
-    padding: 10px 0px 10px 0px;
-}
-
-.botonesRest {
-    grid-area: botonesRest;
-    width: 100%;
-    justify-items: center;
-}
-
-.botRest {
-    grid-area: botRest;
-}
-
-.botRespaldo {
-    grid-area: botRespaldo;
-}
-
-.botRest,
-.botRespaldo {
-    border: 2px solid rgb(42, 76, 89);
-    background: linear-gradient(180deg, rgb(54, 56, 57), rgb(38, 40, 40));
-    box-shadow: 5px 10px 10px -8px;
-    border-radius: 10px;
-    color: rgb(3, 101, 140);
-    text-align: center;
-    align-content: center;
-    font-family: "Segoe UI";
-    font-weight: 700;
-    font-size: 18px;
-    padding: 5px;
-    cursor: pointer;
-    width: 70%;
-    margin-top: 6%;
-    margin-bottom: 6%;
-}
-
-.verCompleto {
-    grid-area: verCompleto;
-    border-top: 1px solid white;
-    width: 100%;
-    text-align: center;
-    cursor: pointer;
-    padding: 10px 0px 10px 0px;
-}
-
-.verCompleto label:hover {
-    color: rgb(3, 101, 140);
 }
 
 /*segunda columna*/
@@ -777,7 +706,6 @@ body {
 @media (min-width: 992px) {
     body {
         overflow: hidden;
-        background: rgb(37, 36, 36);
     }
 
     .container {
@@ -897,36 +825,6 @@ body {
         font-size: 18px;
         width: 100%;
         height: 50px;
-    }
-
-    /*div del cuadro de acciones respaldo y restauración*/
-    /* .Restauracion {
-        grid-template-areas:
-            "nombreResta"
-            "botonesRest"
-            "verCompleto";
-        grid-template-rows: 30% auto 30%;
-        width: 100%;
-        height: 100%;
-        border-radius: 20px;
-    }
-
-    .verCompleto {
-        font-size: 17px;
-    } */
-
-    .nombreResta {
-        grid-area: nombreResta;
-        border-bottom: 1px solid white;
-        width: 100%;
-        text-align: center;
-        padding: 5px 0px 5px 0px;
-    }
-
-    .botRest,
-    .botRespaldo {
-        margin-top: 4%;
-        margin-bottom: 4%;
     }
 
     /*segunda columna*/
